--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
 .App {
-  text-align: center;
+  background-color: #242424;
+  display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .sidebar {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 1rem 2rem;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  flex: 1;
+  background-color: #f5bb11;
 }
 
-.App-link {
-  color: #61dafb;
+.App .sidebar .sidebar--links a {
+  display: block;
+  font-weight: 600;
+  padding: 0.5rem 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .content {
+  flex: 3;
 }
