Added loaders and 10 more images

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,99 @@ body {
   background-color: #242424;
 }
 
+.overlay-box {
+  background-color: #2424246b;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay-box .loader-box {
+  height: 200px;
+  width: 200px;
+
+}
+
+.loading {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 40px;
+	width: 40px;
+	transform: translate(-50%, -50%) rotate(45deg) translate3d(0, 0, 0);
+	animation: animate 1.2s ease-in-out infinite;
+}
+
+@keyframes animate {
+	0%,
+	10%,
+	100% {
+		height: 40px;
+		width: 40px;
+	}
+	65% {
+		height: 70px;
+		width: 70px;
+	}
+}
+
+span {
+	position: absolute;
+	display: block;
+	width: 20px;
+	height: 20px;
+	animation: rotate 1.2s linear both infinite;
+}
+
+@keyframes rotate {
+	0%,
+	30% {
+		transform: rotate(0);
+	}
+	65% {
+		transform: rotate(-40deg);
+	}
+	100% {
+		transform: rotate(-90deg);
+	}
+}
+
+span:nth-child(1) {
+	top: 0;
+	left: 0;
+	background: #868686;
+}
+
+span:nth-child(2) {
+	top: 0;
+	right: 0;
+	background: #f5bb11;
+}
+
+span:nth-child(3) {
+	bottom: 0;
+	left: 0;
+	background: #f5bb11;
+}
+
+span:nth-child(4) {
+	bottom: 0;
+	right: 0;
+	background: #868686;
+}
+
+
+.noscroll {
+  height: 89vh;
+  overflow: hidden;
+}
+
 .App .sidebar {
   display: flex;
   flex-direction: column;
